--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "bcryptjs": "^2.4.3",
     "formik": "^2.4.3",
+    "mongoose": "^7.4.2",
     "next": "13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
