create registerApi and add user from client

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 #Username : ibrahimkurut
 #Password : qANRfgygDzxjBbaN
 MONGODB_URI=mongodb+srv://ibrahimkurut:qANRfgygDzxjBbaN@cluster0.dx2saio.mongodb.net/auth_project?retryWrites=true&w=majority
+
+
+NEXT_PUBLIC_API_URL=http://localhost:3000/api
