--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "formik": "^2.4.3",
     "mongoose": "^7.4.2",
@@ -18,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "yup": "^1.2.0"
   }
