--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.4.3",
     "mongoose": "^7.4.2",
     "next": "13.4.6",
+    "next-auth": "^4.22.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
